# django-singlefile

./: CHANGELOG.md  Makefile  README.md  README.rst  pyproject.toml
django/singlefile/: __init__.py  environment.py
