[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "django-singlefile"
version = "0.2.1"
authors = [{ name = "Andrew Godwin", email = "andrew@aeracode.org" }]
description = "A library to make single-file Django apps easier"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
classifiers = ["Framework :: Django", "Programming Language :: Python :: 3"]
dependencies = ["Django>=5", "whitenoise~=6.6.0"]

[project.urls]
Homepage = "https://github.com/andrewgodwin/django-singlefile"
